--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,36 +1,250 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="/"><img src="/images/Screenshot 2023-04-10 112519.png" alt="" width="100" ></a>
-  <button class="navbar-toggler navbar-little-icon" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon active"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/commity" id="nav-link-padding">Comité <i class="fa-solid fa-users"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/event" id="nav-link-padding">Événement <i class="fa-regular fa-calendar-days"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/help">Aide villageoi <i class="fa-solid fa-circle-info"></i></a>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link logout" id="nav-link-padding">Se déconnecter <i class="fa-solid fa-right-from-bracket"></i></button>
-      </li>
-    </ul>
-  </div>
-  <form class="form-inline navbar-collapse">
-    <input class="form-control mr-sm-2" type="search" placeholder="Recherche par nom de famille" aria-label="Search" id="search-family-input">
-    <button class="btn btn-outline-success my-2 my-sm-0 fa-beat-fade" id="search" type="submit">Recherche</button>
-  </form>
-</nav>
-<div class="main-homepage-div" id="main">
-    <button class="add-model btn btn-primary">Ajouter Une famille</button>
-  {{!-- displya all the family data  --}}
-  <div class="row main-row">
-    {{!-- loop thru the family data and display it --}}
-    <div class="col-sm col-lg-4 col-md-2 family_boxes">
-      {{!-- display the family-info partial  --}}
+<div id="page-wrapper">
+  
+  <!-- Header -->
+    <section id="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+
+            <!-- Logo -->
+              <h1><a href="index.html" id="logo">Halcyonic</a></h1>
+
+            <!-- Nav -->
+              <nav id="nav">
+                <a href="index.html">Homepage</a>
+                <a href="threecolumn.html">Three Column</a>
+                <a href="twocolumn1.html">Two Column #1</a>
+                <a href="twocolumn2.html">Two Column #2</a>
+                <a href="onecolumn.html">One Column</a>
+              </nav>
+
+          </div>
+        </div>
+      </div>
+      <div id="banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-6 col-12-medium">
+
+              <!-- Banner Copy -->
+                <p>We do something really useful, important, and unique. Learn all about it here ...</p>
+                <a href="#" class="button-large">Go on, click me!</a>
+
+            </div>
+            <div class="col-6 col-12-medium imp-medium">
+
+              <!-- Banner Image -->
+                <a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!-- Features -->
+    <section id="features">
+      <div class="container">
+        <div class="row">
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Feature #1 -->
+              <section>
+                <a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
+                <h2>Welcome to Halcyonic</h2>
+                <p>
+                  This is <strong>Halcyonic</strong>, a free site template
+                  by <a href="http://twitter.com/ajlkn">AJ</a> for
+                  <a href="http://html5up.net">HTML5 UP</a>. It's responsive,
+                  built on HTML5 + CSS3, and includes 5 unique page layouts.
+                </p>
+              </section>
+
+          </div>
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Feature #2 -->
+              <section>
+                <a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
+                <h2>Responsive You Say?</h2>
+                <p>
+                  Yes! Halcyonic is built to be fully responsive so it looks great
+                  at every screen size, from desktops to tablets to mobile phones.
+                </p>
+              </section>
+
+          </div>
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Feature #3 -->
+              <section>
+                <a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
+                <h2>License Info</h2>
+                <p>
+                  Halcyonic is licensed under the <a href="http://html5up.net/license">CCA</a> license,
+                  so use it for personal/commercial use as much as you like (just keep
+                  our credits intact).
+                </p>
+              </section>
+
+          </div>
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Feature #4 -->
+              <section>
+                <a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
+                <h2>Volutpat etiam aliquam</h2>
+                <p>
+                  Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
+                  eu varius nibh. Suspendisse vitae magna mollis.
+                </p>
+              </section>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!-- Content -->
+    <section id="content">
+      <div class="container">
+        <div class="row aln-center">
+          <div class="col-4 col-12-medium">
+
+            <!-- Box #1 -->
+              <section>
+                <header>
+                  <h2>Who We Are</h2>
+                  <h3>A subheading about who we are</h3>
+                </header>
+                <a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
+                <p>
+                  Duis neque nisi, dapibus sed mattis quis, rutrum accumsan magna sed.
+                  Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
+                  justo facilisis quis. Sed sagittis amet lorem ipsum.
+                </p>
+              </section>
+
+          </div>
+          <div class="col-4 col-6-medium col-12-small">
+
+            <!-- Box #2 -->
+              <section>
+                <header>
+                  <h2>What We Do</h2>
+                  <h3>A subheading about what we do</h3>
+                </header>
+                <ul class="check-list">
+                  <li>Sed mattis quis rutrum accum</li>
+                  <li>Eu varius nibh suspendisse lorem</li>
+                  <li>Magna eget odio amet mollis justo</li>
+                  <li>Facilisis quis sagittis mauris</li>
+                  <li>Amet tellus gravida lorem ipsum</li>
+                </ul>
+              </section>
+
+          </div>
+          <div class="col-4 col-6-medium col-12-small">
+
+            <!-- Box #3 -->
+              <section>
+                <header>
+                  <h2>What People Are Saying</h2>
+                  <h3>And a final subheading about our clients</h3>
+                </header>
+                <ul class="quote-list">
+                  <li>
+                    <img src="images/pic06.jpg" alt="" />
+                    <p>"Neque nisidapibus mattis"</p>
+                    <span>Jane Doe, CEO of UntitledCorp</span>
+                  </li>
+                  <li>
+                    <img src="images/pic07.jpg" alt="" />
+                    <p>"Lorem ipsum consequat!"</p>
+                    <span>John Doe, President of FakeBiz</span>
+                  </li>
+                  <li>
+                    <img src="images/pic08.jpg" alt="" />
+                    <p>"Magna veroeros amet tempus"</p>
+                    <span>Mary Smith, CFO of UntitledBiz</span>
+                  </li>
+                </ul>
+              </section>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!-- Footer -->
+    <section id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-8 col-12-medium">
+
+            <!-- Links -->
+              <section>
+                <h2>Links to Important Stuff</h2>
+                <div>
+                  <div class="row">
+                    <div class="col-3 col-12-small">
+                      <ul class="link-list last-child">
+                        <li><a href="#">Neque amet dapibus</a></li>
+                        <li><a href="#">Sed mattis quis rutrum</a></li>
+                        <li><a href="#">Accumsan suspendisse</a></li>
+                        <li><a href="#">Eu varius vitae magna</a></li>
+                      </ul>
+                    </div>
+                    <div class="col-3 col-12-small">
+                      <ul class="link-list last-child">
+                        <li><a href="#">Neque amet dapibus</a></li>
+                        <li><a href="#">Sed mattis quis rutrum</a></li>
+                        <li><a href="#">Accumsan suspendisse</a></li>
+                        <li><a href="#">Eu varius vitae magna</a></li>
+                      </ul>
+                    </div>
+                    <div class="col-3 col-12-small">
+                      <ul class="link-list last-child">
+                        <li><a href="#">Neque amet dapibus</a></li>
+                        <li><a href="#">Sed mattis quis rutrum</a></li>
+                        <li><a href="#">Accumsan suspendisse</a></li>
+                        <li><a href="#">Eu varius vitae magna</a></li>
+                      </ul>
+                    </div>
+                    <div class="col-3 col-12-small">
+                      <ul class="link-list last-child">
+                        <li><a href="#">Neque amet dapibus</a></li>
+                        <li><a href="#">Sed mattis quis rutrum</a></li>
+                        <li><a href="#">Accumsan suspendisse</a></li>
+                        <li><a href="#">Eu varius vitae magna</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+          </div>
+          <div class="col-4 col-12-medium imp-medium">
+
+            <!-- Blurb -->
+              <section>
+                <h2>An Informative Text Blurb</h2>
+                <p>
+                  Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
+                  varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
+                  dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
+                  lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
+                </p>
+              </section>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!-- Copyright -->
+    <div id="copyright">
+      &copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
     </div>
-  </div>
+
 </div>
