--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #242628;">
+<nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="/"><img src="/images/Screenshot 2023-04-10 112519.png" alt="" width="100" ></a>
   <button class="navbar-toggler navbar-little-icon" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon active"></span>
@@ -6,42 +6,111 @@
   <div class="collapse navbar-collapse main-nav" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link border border-warning text-dark" href="/commity" id="nav-link-padding">PUPPIES FOR SALE</i></a>
+        <a class="nav-link border border-warning text-dark" href="/commity" id="nav-link-padding">CHIOTS À VENDRE</i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link border border-success text-light" href="/event" id="nav-link-padding">BREEDS</a>
+        <a class="nav-link border border-success text-light" href="/event" id="nav-link-padding">RACES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link border border-secondary rounded text-light" href="/help">EDUCATE</a>
+        <a class="nav-link border border-secondary rounded text-light" href="/help">ÉDUQUER</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link border border-dark text-light" href="/help">FORUM</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link border border-info rounded text-light" href="/help">PICTURES</a>
+        <a class="nav-link border border-info rounded text-light" href="/help">PHOTOS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link border border-secondary text-light" href="/help">VIDEOS</a>
+        <a class="nav-link border border-secondary text-light" href="/help">VIDÉOS</a>
       </li>
     </ul>
   </div>
   
-  <button class="nav-link logout fa-beat-fade" id="nav-link">Contact <i class="fa-solid fa-right-to-bracket"></i></button>
+  <button class=" fa-beat-fade contact_me_text" id="nav-link">Contact Moi<i class="fa-solid fa-right-to-bracket m-1"></i></button>
 
 </nav>
 
-<section class="about row">
-  <div class="about-context-one col">
+<section class="about ">
+  <div class="about-context-one col-sm-12 col-lg-6">
     <div class="about-text">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam aliquid debitis unde possimus perferendis architecto.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam a unde suscipit excepturi minima nulla dolorum aperiam harum asperiores dolor autem nesciunt ducimus, atque debitis esse. Doloremque fugit sed nemo!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ad sit molestias perspiciatis voluptatum. Earum, reiciendis? Quasi laborum facere explicabo magnam rem itaque incidunt accusantium velit animi dignissimos, officia iusto!
     </div>
-    <div class="btn">
-      <button>
-        Click Me
-      </button>
+    <a href="#info"><div class="btn">
+      <button type="button" class="btn-primary">Plus D'info</button>
+    </a>
     </div>
   </div>
-  <div class="about-context-two col">
+  <div class="about-context-two col-sm-12 col-lg-6">
     <img src="/images/puppy-2785074_640.jpg" alt="" class="m-2">
   </div>
 </section>
+<div class="pets_content" id="info">
+  <div class="pet_context">
+    <img src="/images/work.png" alt="">
+    <h1>Ce que nous faisons</h1>
+    <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+  </div>
+  <div class="pet_context">
+    <img src="/images/famillyjpg.jpg" alt="">
+    <h1>Nos Chiots</h1>
+    <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+  </div>
+  <div class="pet_context">
+    <img src="/images/pomsky3jpg.jpg" alt="">
+    <h1>Chiots Deja Vendu</h1>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+  </div>
+  <div class="pet_context">
+    <img src="/images/whowe.png" alt="">
+    <h1>Qui Nous Sommes?</h1>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusamus dolores dignissimos autem quasi libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+  </div>
+</div>
+
+
+ <div class="menu" id="menu">
+      <div class="box-container">
+
+        <div class="box">
+          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <h3 class="heading-1">Organic Kona coffee from Hawai'i</h3>
+          <div class="price"><div class="price-1 prices">62.99</div><div class="dollar-sign">$</div><span>110$</span></div>
+          <button class="btn-danger">See Availability</button>  
+        </div>
+
+        <div class="box">
+          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <h3 class="heading-2">Granell Wild coffee from Indonesia</h3>
+          <div class="price"><div class="price-2 prices">108.99</div><div class="dollar-sign">$</div><span>120.99$</span></div>
+          <button class="btn-danger">See availability</button>
+        </div>
+
+        <div class="box">
+          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <h3 class="heading-3" >Leeroy Jenkins coffee from Guatemala</h3>
+          <div class="price"><div class="prices price-3">65.99</div><div class="dollar-sign">$</div><span>40.99$</span></div>
+          <button class="btn-danger">See availability</button>
+        </div>
+
+        <div class="box">
+          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
+          <div class="price"><div class="price-4 prices">98.99</div><div class="dollar-sign">$</div><span>50.99$</span></div>
+          <button class="btn-danger">See availability</button>
+        </div>
+
+        <div class="box">
+          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
+          <div class="price"><div class="price-5 prices">175.99</div><div class="dollar-sign">$</div><span>90.99$</span></div>
+          <button class="btn-danger">See availability</button>
+        </div>
+
+        <div class="box">
+          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
+          <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign">$</div><span>115.99$</span></div>
+          <button class="btn-danger">See availability</button>
+        </div>
+
+      </div>
+    </div>
