--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,10 +68,11 @@ section{
 .btn-primary{
   font-size: 25px;
   padding: 10px;
-  background-color: rgb(80, 90, 112);
-  /* border-radius: 15px; */
-  box-shadow: 10px 5px 14px rgb(156, 153, 153);
-  margin-top: 35px;
+  background-color: #0e4575;
+  color: #dcd7d0;
+  font-family:'Times New Roman', Times, serif;
+  border-radius: 15px 0px;
+  box-shadow: 4px 5px 10px rgb(4, 43, 97);
 }
 
 
@@ -96,6 +97,10 @@ section{
   color: #dcd7d0;
 }
 
+.pet_context_text{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 img{
   width: 100%;
 }
@@ -109,7 +114,6 @@ img{
   text-transform: uppercase;
   padding-bottom: 4rem;
 }
-
 
 
 .menu {
@@ -138,7 +142,7 @@ img{
   color: white;
   font-size: 2rem;
   padding: 1rem 0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .menu .box-container .box .price {
