--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,6 @@
+<div class="main-text">
+  Ramenez l'amour à la maison ! Nous facilitons les voyages de chiots à l'échelle nationale ❤️.
+</div>
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="/"><img src="/images/Screenshot 2023-04-10 112519.png" alt="" width="100" ></a>
   <button class="navbar-toggler navbar-little-icon" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,9 +11,11 @@
       <li class="nav-item">
         <a class="nav-link border border-warning text-dark" href="/commity" id="nav-link-padding">CHIOTS À VENDRE</i></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link border border-success text-light" href="/event" id="nav-link-padding">RACES</a>
-      </li>
+      <a href="#races">
+        <li class="nav-item">
+          <a class="nav-link border border-success text-light" href="#races" id="nav-link-padding">RACES</a>
+        </li>
+      </a>
       <li class="nav-item">
         <a class="nav-link border border-secondary rounded text-light" href="/help">ÉDUQUER</a>
       </li>
@@ -50,6 +55,7 @@
     <div>
       <h1>Ce que nous faisons</h1>
       <div class="pet_context_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+      <button class="btn btn-light info_btn">Voir</button>
     </div>
   </div>
   <div class="pet_context">
@@ -57,18 +63,20 @@
     <h1>Nos Chiots</h1>
     <div class="pet_context_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
     <a href="#dogs">
-      <button class="btn btn-light">Voir</button>
+      <button class="btn btn-light info_btn">Voir</button>
     </a>
   </div>
   <div class="pet_context">
     <img src="/images/pomsky3jpg.jpg" alt="">
     <h1>Chiots Deja Vendu</h1>
     <div class="pet_context_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+    <button class="btn btn-light info_btn">Voir</button>
   </div>
   <div class="pet_context">
     <img src="/images/whowe.png" alt="">
     <h1>Qui Nous Sommes?</h1>
-    <div class="pet_context_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusamus dolores dignissimos autem quasi libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+    <div class="pet_context_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusamus</div>
+    <button class="btn btn-light info_btn">Voir</button>
   </div>
 </div>
 
@@ -80,43 +88,98 @@
           <img src="/images/puppy-2785074_640.jpg" alt="">
           <h3 class="heading-1">Organic Kona coffee from Hawai'i</h3>
           <div class="price"><div class="price-1 prices">62.99</div><div class="dollar-sign">$</div><span>110$</span></div>
-          <button class="btn btn-light">See Availability</button>  
-        </div>
+          <button class="btn btn-light">Voir disponibilité</button>          </div>
 
         <div class="box">
           <img src="/images/puppy-2785074_640.jpg" alt="">
           <h3 class="heading-2">Granell Wild coffee from Indonesia</h3>
           <div class="price"><div class="price-2 prices">108.99</div><div class="dollar-sign">$</div><span>120.99$</span></div>
-          <button class="btn btn-light">See availability</button>
+          <button class="btn btn-light">Voir disponibilité</button>
         </div>
 
         <div class="box">
           <img src="/images/puppy-2785074_640.jpg" alt="">
           <h3 class="heading-3" >Leeroy Jenkins coffee from Guatemala</h3>
           <div class="price"><div class="prices price-3">65.99</div><div class="dollar-sign">$</div><span>40.99$</span></div>
-          <button class="btn btn-light">See availability</button>
+          <button class="btn btn-light">Voir disponibilité</button>
         </div>
 
         <div class="box">
           <img src="/images/puppy-2785074_640.jpg" alt="">
           <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
           <div class="price"><div class="price-4 prices">98.99</div><div class="dollar-sign">$</div><span>50.99$</span></div>
-          <button class="btn btn-light">See availability</button>
+          <button class="btn btn-light">Voir disponibilité</button>
         </div>
 
         <div class="box">
           <img src="/images/puppy-2785074_640.jpg" alt="">
           <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
           <div class="price"><div class="price-5 prices">175.99</div><div class="dollar-sign">$</div><span>90.99$</span></div>
-          <button class="btn btn-light">See availability</button>
+          <button class="btn btn-light">Voir disponibilité</button>
         </div>
 
         <div class="box">
           <img src="/images/puppy-2785074_640.jpg" alt="">
           <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
           <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign">$</div><span>115.99$</span></div>
-          <button class="btn btn-light">See availability</button>
+          <button class="btn btn-light">Voir disponibilité</button>
         </div>
 
+      </div>
+    </div>
+
+
+    <div class="race" id="races">
+      <div class="races">
+        <div class="races_heading">
+          Tout Les Races
+        </div>
+      </div>
+
+      <div class="races_context">
+        <h3>Lorem, ipsum dolor.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, expedita!</p>
+      </div>
+      <div class="all-what-exists row">
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/pomsky1.jpg" alt="" class="races_img">
+          <h1>Hello</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/pomsky4.jpg" alt="" class=" races_img">
+          <h1>Hello</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/pomsky4.jpg" alt="" class="races_img">
+          <h1>Hello</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/pomsky4.jpg" alt="" class="races_img">
+          <h1>Hello</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/pomsky4.jpg" alt="" class="races_img">
+          <h1>Hello</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/pomsky4.jpg" alt="" class="races_img">
+          <h1>Hello</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/pomsky4.jpg" alt="" class="races_img">
+          <h1>Hello</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">        
+          <img src="/images/pomsky4.jpg" alt="" class="races_img">
+          <h1>Hello</h1> 
+          <p>née le 20-2-2020</p> 
+        </div>
       </div>
     </div>
