updated the main page with new dogs images and new content

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -54,22 +54,23 @@
     {{!-- here  --}}
     <div>
       <h1>Ce que nous faisons</h1>
-      <div class="pet_context_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+      <div class="pet_context_text">Un pomskies de rêve où chaque client est traité comme un seul client
+</div>
       <button class="btn btn-light info_btn">Voir</button>
     </div>
   </div>
   <div class="pet_context">
     <img src="/images/famillyjpg.jpg" alt="">
-    <h1>Nos Chiots</h1>
-    <div class="pet_context_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+    <h1>Quelque Chiots deja vendu</h1>
+    <div class="pet_context_text">Ces chiens ne représentent que %5 de nos chiens vendus</div>
     <a href="#dogs">
       <button class="btn btn-light info_btn">Voir</button>
     </a>
   </div>
   <div class="pet_context">
     <img src="/images/pomsky3jpg.jpg" alt="">
-    <h1>Chiots Deja Vendu</h1>
-    <div class="pet_context_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, atque. </div>
+    <h1>Voir Les Parent</h1>
+    <div class="pet_context_text">Les parents sont %100 génétiquement pomskies, avec un test ADN qui a etai fais pour les deux pomskies</div>
     <button class="btn btn-light info_btn">Voir</button>
   </div>
   <div class="pet_context">
@@ -85,44 +86,44 @@
       <div class="box-container">
 
         <div class="box">
-          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <img src="/images/pomsky10.jpg" alt="">
           <h3 class="heading-1">Organic Kona coffee from Hawai'i</h3>
-          <div class="price"><div class="price-1 prices">62.99</div><div class="dollar-sign">$</div><span>110$</span></div>
-          <button class="btn btn-light">Voir disponibilité</button>          </div>
+          <div class="price"><div class="price-1 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+          <button class="btn btn-light">Voir disponibilité de ce type</button>          </div>
 
         <div class="box">
-          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <img src="/images/pomsky8.jpg" alt="">
           <h3 class="heading-2">Granell Wild coffee from Indonesia</h3>
-          <div class="price"><div class="price-2 prices">108.99</div><div class="dollar-sign">$</div><span>120.99$</span></div>
-          <button class="btn btn-light">Voir disponibilité</button>
+          <div class="price"><div class="price-2 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+          <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
-          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <img src="/images/pomsky9.jpg" alt="">
           <h3 class="heading-3" >Leeroy Jenkins coffee from Guatemala</h3>
-          <div class="price"><div class="prices price-3">65.99</div><div class="dollar-sign">$</div><span>40.99$</span></div>
-          <button class="btn btn-light">Voir disponibilité</button>
+          <div class="price"><div class="prices price-3">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+          <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
-          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <img src="/images/pomsky7.jpg" alt="">
           <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
-          <div class="price"><div class="price-4 prices">98.99</div><div class="dollar-sign">$</div><span>50.99$</span></div>
-          <button class="btn btn-light">Voir disponibilité</button>
+          <div class="price"><div class="price-4 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+          <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
-          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <img src="/images/pomsky5.jpg" alt="">
           <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
-          <div class="price"><div class="price-5 prices">175.99</div><div class="dollar-sign">$</div><span>90.99$</span></div>
-          <button class="btn btn-light">Voir disponibilité</button>
+          <div class="price"><div class="price-5 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+          <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
-          <img src="/images/puppy-2785074_640.jpg" alt="">
+          <img src="/images/pomsky6.jpg" alt="">
           <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
-          <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign">$</div><span>115.99$</span></div>
-          <button class="btn btn-light">Voir disponibilité</button>
+          <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign"></div><span>115.99$</span></div>
+          <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
       </div>
