--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -87,20 +87,20 @@
 
         <div class="box">
           <img src="/images/pomsky10.jpg" alt="">
-          <h3 class="heading-1">Organic Kona coffee from Hawai'i</h3>
+          <h3 class="heading-1">Kimy</h3>
           <div class="price"><div class="price-1 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>          </div>
 
         <div class="box">
           <img src="/images/pomsky8.jpg" alt="">
-          <h3 class="heading-2">Granell Wild coffee from Indonesia</h3>
+          <h3 class="heading-2">Kimy et Pike</h3>
           <div class="price"><div class="price-2 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
           <img src="/images/pomsky9.jpg" alt="">
-          <h3 class="heading-3" >Leeroy Jenkins coffee from Guatemala</h3>
+          <h3 class="heading-3" >Kimy</h3>
           <div class="price"><div class="prices price-3">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
@@ -133,7 +133,7 @@
     <div class="race" id="races">
       <div class="races">
         <div class="races_heading">
-          Tout Les Races
+          Quelque Parents
         </div>
       </div>
 
@@ -143,44 +143,25 @@
       </div>
       <div class="all-what-exists row">
         <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/pomsky1.jpg" alt="" class="races_img">
+          <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="" class="races_img">
+          <h1>Tokyo</h1>
+          <p>née le 20-2-2020</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/387468060_692725849422542_3972355254801819315_n.jpg" alt="" class=" races_img">
+          <h1>Kimy</h1>
+          <p>née le 20-2-2022</p>
+        </div>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+          <img src="/images/387339308_700277132155725_8441038881877265698_n.jpg" alt="" class="races_img">
           <h1>Hello</h1>
           <p>née le 20-2-2020</p>
         </div>
         <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/pomsky4.jpg" alt="" class=" races_img">
+          <img src="/images/387532427_211343571833984_349559310900261954_n.jpg" alt="" class="races_img">
           <h1>Hello</h1>
           <p>née le 20-2-2020</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/pomsky4.jpg" alt="" class="races_img">
-          <h1>Hello</h1>
-          <p>née le 20-2-2020</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/pomsky4.jpg" alt="" class="races_img">
-          <h1>Hello</h1>
-          <p>née le 20-2-2020</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/pomsky4.jpg" alt="" class="races_img">
-          <h1>Hello</h1>
-          <p>née le 20-2-2020</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/pomsky4.jpg" alt="" class="races_img">
-          <h1>Hello</h1>
-          <p>née le 20-2-2020</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/pomsky4.jpg" alt="" class="races_img">
-          <h1>Hello</h1>
-          <p>née le 20-2-2020</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">        
-          <img src="/images/pomsky4.jpg" alt="" class="races_img">
-          <h1>Hello</h1> 
-          <p>née le 20-2-2020</p> 
         </div>
       </div>
     </div>
+    {{> footer}}
