--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="footer-upper-content">
-    <div>Copyright © November 14, 2012 A-Dream Pomsky Kennel - All Rights Reserved.</div>
-    <div>Powered by GoDaddy</div>
+    <div>Copyright © November 20, 2023 Yuva Pomskies Kennel - All Rights Reserved.</div>
+    <div>Powered by Yuva Pomskies</div>
   </div>
   <div class="footer-lower-content">
       PUPPY APPLICATIONPRIVACY POLICYTERMS AND CONDITIONS
