--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,14 +13,11 @@
       </li>
       <a href="#races">
         <li class="nav-item">
-          <a class="nav-link border border-success text-light" href="#races" id="nav-link-padding">RACES</a>
+          <a class="nav-link border border-success text-light" href="#races" id="nav-link-padding">Parent Reproducteur</a>
         </li>
       </a>
       <li class="nav-item">
-        <a class="nav-link border border-secondary rounded text-light" href="/help">ÉDUQUER</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link border border-info rounded text-light" href="/help">PHOTOS</a>
+        <a class="nav-link border border-secondary rounded text-light" href="/help">Tous Les Chiots Disponibles</a>
       </li>
       <li class="nav-item">
         <a class="nav-link border border-secondary text-light" href="/help">VIDÉOS</a>
@@ -45,7 +42,7 @@
     </div>
   </div>
   <div class="about-context-two col-sm-12 col-lg-6">
-    <img src="/images/puppy-2785074_640.jpg" alt="" class="m-2">
+    <img src="/images/Emma.jpg" alt="" class="m-2 dog">
   </div>
 </section>
 <div class="pets_content" id="info">
@@ -92,28 +89,28 @@
           <button class="btn btn-light">Voir disponibilité de ce type</button>          </div>
 
         <div class="box">
-          <img src="/images/pomsky8.jpg" alt="">
+          <img src="/images/pomsky6.jpg" alt="">
           <h3 class="heading-2">Kimy et Pike</h3>
           <div class="price"><div class="price-2 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
-          <img src="/images/pomsky9.jpg" alt="">
+          <img src="/images/dog.jpg" alt="">
           <h3 class="heading-3" >Kimy</h3>
           <div class="price"><div class="prices price-3">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
-          <img src="/images/pomsky7.jpg" alt="">
+          <img src="/images/pomsky6.jpg" alt="">
           <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
           <div class="price"><div class="price-4 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>
         </div>
 
         <div class="box">
-          <img src="/images/pomsky5.jpg" alt="">
+          <img src="/images/pomsky6.jpg" alt="">
           <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
           <div class="price"><div class="price-5 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>
@@ -133,7 +130,7 @@
     <div class="race" id="races">
       <div class="races">
         <div class="races_heading">
-          Quelque Parents
+          Parent Reproducteur
         </div>
       </div>
 
@@ -142,23 +139,22 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, expedita!</p>
       </div>
       <div class="all-what-exists row">
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
+        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
           <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="" class="races_img">
           <h1>Tokyo</h1>
           <p>née le 20-2-2020</p>
         </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/387468060_692725849422542_3972355254801819315_n.jpg" alt="" class=" races_img">
-          <h1>Kimy</h1>
-          <p>née le 20-2-2022</p>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+          <img src="/images/Genetique Tokyo2.jpg" alt="" class=" races_img">
+          <h1>Tokyo Genetique</h1>
         </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/387339308_700277132155725_8441038881877265698_n.jpg" alt="" class="races_img">
-          <h1>Hello</h1>
-          <p>née le 20-2-2020</p>
+        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+        <img src="/images/pike.jpg" alt="" class="races_img">                
+        <h1>Pike</h1>
+        <p>née le 20-1-2022</p>
         </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-4">
-          <img src="/images/387532427_211343571833984_349559310900261954_n.jpg" alt="" class="races_img">
+        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+          <img src="/images/pike.jpg" alt="" class="races_img">          
           <h1>Hello</h1>
           <p>née le 20-2-2020</p>
         </div>
