updated the style of the main page

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -65,7 +65,7 @@
     </a>
   </div>
   <div class="pet_context">
-    <img src="/images/pomsky3jpg.jpg" alt="">
+    <img src="/images/pomsky1.jpg" alt="">
     <h1>Voir Les Parent</h1>
     <div class="pet_context_text">Les parents sont %100 génétiquement pomskies, avec un test ADN qui a etai fais pour les deux pomskies</div>
     <button class="btn btn-light info_btn">Voir</button>
