error fix, when image is not displaying

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -71,7 +71,7 @@
     <button class="btn btn-light info_btn">Voir</button>
   </div>
   <div class="pet_context">
-    <img src="/images/whowe.png" alt="">
+    <img src="/images/whoWe.png" alt="">
     <h1>Qui Nous Sommes?</h1>
     <div class="pet_context_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusamus</div>
     <button class="btn btn-light info_btn">Voir</button>
