image not displaying due to an error on the code

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -96,7 +96,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/dog.jpg" alt="">
+          <img src="/images/dog.png" alt="">
           <h3 class="heading-3" >Kimy</h3>
           <div class="price"><div class="prices price-3">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
           <button class="btn btn-light">Voir disponibilité de ce type</button>
