--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="about-context-two col-sm-12 col-lg-6">
-    <img src="/images/Emma.jpg" alt="" class="m-2 dog">
+    <img src="/images/image.jpg" alt="" class="m-2 dog">
   </div>
 </section>
 <div class="pets_content" id="info">
