added more images and updated the style

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,9 @@
+<div class="svg">
+  <svg class="container"  x="0px"  y="0px" viewBox="0 0 50 31.25" height="31.25" width="50" preserveAspectRatio='xMidYMid meet'>
+    <path  class="track" stroke-width="4" fill="none" pathlength="100" d="M0.625 21.5 h10.25 l3.75 -5.875 l7.375 15 l9.75 -30 l7.375 20.875 v0 h10.25" />
+    <path class="car"stroke-width="4" fill="none" pathlength="100"d="M0.625 21.5 h10.25 l3.75 -5.875 l7.375 15 l9.75 -30 l7.375 20.875 v0 h10.25"/>
+  </svg>
+</div>
 <div class="main-text">
   Ramenez l'amour à la maison ! Nous facilitons les voyages de chiots à l'échelle nationale ❤️.
 </div>
@@ -20,7 +26,7 @@
         <a class="nav-link border border-secondary rounded text-light" href="/help">Tous Les Chiots Disponibles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link border border-secondary text-light" href="/help">VIDÉOS</a>
+        <a class="nav-link border border-secondary text-light" href="/help">My Clients</a>
       </li>
     </ul>
   </div>
@@ -149,12 +155,12 @@
           <h1>Tokyo Genetique</h1>
         </div>
         <div class="alldogs col-sm-3 col-md-4 col-lg-6">
-        <img src="/images/pike.jpg" alt="" class="races_img">                
+        <img src="/images/kemmy.jpg" alt="" class="races_img">                
         <h1>Pike</h1>
         <p>née le 20-1-2022</p>
         </div>
         <div class="alldogs col-sm-3 col-md-4 col-lg-6">
-          <img src="/images/pike.jpg" alt="" class="races_img">          
+          <img src="/images/Genetique Tokyo2.jpg" alt="" class="races_img">          
           <h1>Hello</h1>
           <p>née le 20-2-2020</p>
         </div>
