about pomskies content"

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse main-nav" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link border border-warning text-dark" href="/commity" id="nav-link-padding">CHIOTS À VENDRE</i></a>
+        <div class="nav-link border border-warning text-dark chiots_avendre" href="/" id="nav-link-padding">CHIOTS À VENDRE</i></div>
       </li>
       <a href="#races">
         <li class="nav-item">
@@ -38,11 +38,15 @@
 <section class="about ">
   <div class="about-context-one col-sm-12 col-lg-6">
     <div class="about-text">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam aliquid debitis unde possimus perferendis architecto.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam a unde suscipit excepturi minima nulla dolorum aperiam harum asperiores dolor autem nesciunt ducimus, atque debitis esse. Doloremque fugit sed nemo!
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ad sit molestias perspiciatis voluptatum. Earum, reiciendis? Quasi laborum facere explicabo magnam rem itaque incidunt accusantium velit animi dignissimos, officia iusto!
+      En raison de la différence de taille entre les Poméraniens et les huskies, l'élevage naturel entre ces chiens est dangereux,
+      exigeant que les pomskies soient mis au monde par insémination artificielle. Pour cette raison,
+      Les pomskies sont encore assez rares dans le monde canin et ont tendance à être très chers.
+      Pomsky étant le nouveau venu dans le groupe des chiens de marque, il ne fait aucun doute qu'il est l'un des chiens les plus affectueux que vous puissiez rencontrer.
+      Cela peut expliquer pourquoi ils sont tant aimés. Comme déjà mentionné, ce chien est l'un des chiens de marque les plus récents. Il contient l'une des histoires d'évolution les plus fascinantes.
+      En fait, si vous aviez interrogé quelqu'un sur le chien Pomski il y a 5 ans, vous n'auriez pas obtenu de réponse.
+      La première apparition enregistrée d'un mélange de Husky de Poméranie remonte à 2009.
     </div>
-    <a href="#info"><div class="btn">
+    <a href="https://puppiesclub.com/pomsky/"><div class="btn">
       <button type="button" class="btn-primary fa-beat-fade">Plus D'info</button>
     </a>
     </div>
@@ -167,3 +171,5 @@
       </div>
     </div>
     {{> footer}}
+
+    <script src="../controllers/homepage.js"></script>
