--- a/views/partials/aboutUs.handlebars
+++ b/views/partials/aboutUs.handlebars
@@ -1,3 +1,12 @@
-<div>
-  
-</div>
+<section class="about_us two-column-section">
+    <div class="column">
+        <img src="/images/pomsky1.jpg" alt="Image">
+    </div>
+    <div class="column">
+        <h2>Content Heading</h2>
+        <p>Bonjour, je m'appelle Yuva et mon histoire avec les pomskies a commencé en 2020 après avoir eu mon premier adorable chien pomsky (TOKYO), 
+          j'ai tomber amoureux d'elle au premier regard.
+           Après avoir lu beaucoup de choses sur ces chiens, j'ai décidé de travailler dur pour aider la cette generation de desparition.
+          J'ai toujours fais un test Ambark (ADN Test) pour les parents, pour m'assurer que les enfants seront 100% pomskies.</p>
+    </div>
+</section>
