--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -61,8 +61,7 @@
     {{!-- here  --}}
     <div>
       <h1>Ce que nous faisons</h1>
-      <div class="pet_context_text">Un pomskies de rêve où chaque client est traité comme un seul client
-</div>
+      <div class="pet_context_text">Un pomskies de rêve où chaque client est traité comme un seul client</div>
       <button class="btn btn-light info_btn">Voir</button>
     </div>
   </div>
@@ -88,90 +87,88 @@
   </div>
 </div>
 
-  {{> aboutUs}}
+{{> aboutUs}}
 
-
- <div class="menu" id="dogs">
-      <div class="box-container">
-
-        <div class="box">
-          <img src="/images/pomsky10.jpg" alt="">
-          <h3 class="heading-1">Kimy</h3>
-          <div class="price"><div class="price-1 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
-          <button class="btn btn-light">Voir disponibilité de ce type</button>          </div>
-
-        <div class="box">
-          <img src="/images/pomsky6.jpg" alt="">
-          <h3 class="heading-2">Kimy et Pike</h3>
-          <div class="price"><div class="price-2 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
-          <button class="btn btn-light">Voir disponibilité de ce type</button>
-        </div>
-
-        <div class="box">
-          <img src="/images/dog.png" alt="">
-          <h3 class="heading-3" >Kimy</h3>
-          <div class="price"><div class="prices price-3">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
-          <button class="btn btn-light">Voir disponibilité de ce type</button>
-        </div>
-
-        <div class="box">
-          <img src="/images/pomsky6.jpg" alt="">
-          <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
-          <div class="price"><div class="price-4 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
-          <button class="btn btn-light">Voir disponibilité de ce type</button>
-        </div>
-
-        <div class="box">
-          <img src="/images/pomsky6.jpg" alt="">
-          <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
-          <div class="price"><div class="price-5 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
-          <button class="btn btn-light">Voir disponibilité de ce type</button>
-        </div>
-
-        <div class="box">
-          <img src="/images/pomsky6.jpg" alt="">
-          <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
-          <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign"></div><span>115.99$</span></div>
-          <button class="btn btn-light">Voir disponibilité de ce type</button>
-        </div>
-
-      </div>
+<div class="menu" id="dogs">
+  <div class="box-container">
+    <div class="box">
+      <img src="/images/pomsky10.jpg" alt="">
+      <h3 class="heading-1">Kimy</h3>
+      <div class="price"><div class="price-1 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+      <button class="btn btn-light">Voir disponibilité de ce type</button>          
     </div>
 
-
-    <div class="race" id="races">
-      <div class="races">
-        <div class="races_heading">
-          Parent Reproducteur
-        </div>
-      </div>
-
-      <div class="races_context">
-        <h3>Lorem, ipsum dolor.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, expedita!</p>
-      </div>
-      <div class="all-what-exists row">
-        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
-          <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="" class="races_img">
-          <h1>Tokyo</h1>
-          <p>née le 20-2-2020</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
-          <img src="/images/Genetique Tokyo2.jpg" alt="" class=" races_img">
-          <h1>Tokyo Genetique</h1>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
-        <img src="/images/kemmy.jpg" alt="" class="races_img">                
-        <h1>Pike</h1>
-        <p>née le 20-1-2022</p>
-        </div>
-        <div class="alldogs col-sm-3 col-md-4 col-lg-6">
-          <img src="/images/Genetique Tokyo2.jpg" alt="" class="races_img">          
-          <h1>Hello</h1>
-          <p>née le 20-2-2020</p>
-        </div>
-      </div>
+    <div class="box">
+      <img src="/images/pomsky6.jpg" alt="">
+      <h3 class="heading-2">Kimy et Pike</h3>
+      <div class="price"><div class="price-2 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+      <button class="btn btn-light">Voir disponibilité de ce type</button>
     </div>
-    {{> footer}}
 
-    <script src="../controllers/homepage.js"></script>
+    <div class="box">
+      <img src="/images/dog.png" alt="">
+      <h3 class="heading-3" >Kimy</h3>
+      <div class="price"><div class="prices price-3">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+      <button class="btn btn-light">Voir disponibilité de ce type</button>
+    </div>
+
+    <div class="box">
+      <img src="/images/pomsky6.jpg" alt="">
+      <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
+      <div class="price"><div class="price-4 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+      <button class="btn btn-light">Voir disponibilité de ce type</button>
+    </div>
+
+    <div class="box">
+      <img src="/images/pomsky6.jpg" alt="">
+      <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
+      <div class="price"><div class="price-5 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
+      <button class="btn btn-light">Voir disponibilité de ce type</button>
+    </div>
+
+    <div class="box">
+      <img src="/images/pomsky6.jpg" alt="">
+      <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
+      <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign"></div><span>115.99$</span></div>
+      <button class="btn btn-light">Voir disponibilité de ce type</button>
+    </div>
+
+  </div>
+</div>
+
+<div class="race" id="races">
+  <div class="races">
+    <div class="races_heading">
+      Parent Reproducteur
+    </div>
+  </div>
+
+  <div class="races_context">
+    <h3>Lorem, ipsum dolor.</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, expedita!</p>
+  </div>
+  <div class="all-what-exists row">
+    <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+      <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="" class="races_img">
+      <h1>Tokyo</h1>
+      <p>née le 20-2-2020</p>
+    </div>
+    <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+      <img src="/images/Genetique Tokyo2.jpg" alt="" class=" races_img">
+      <h1>Tokyo Genetique</h1>
+    </div>
+    <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+      <img src="/images/kemmy.jpg" alt="" class="races_img">                
+      <h1>Pike</h1>
+      <p>née le 20-1-2022</p>
+    </div>
+    <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+      <img src="/images/Genetique Tokyo2.jpg" alt="" class="races_img">          
+      <h1>Hello</h1>
+      <p>née le 20-2-2020</p>
+    </div>
+  </div>
+</div>
+{{> footer}}
+
+<script src="../controllers/homepage.js"></script>
